<resources>
    <string name="app_name">Food Runner</string>
    <string name="Preference_file">FoodRunner Preference</string>
    <string name="logged_in_mobile">Mobile Number: 0123456789 </string>
    <string name="logged_in_password">Password: joyjit</string>
    <string name="registration_successful">Registration Successful:</string>
    <string name="home_page">Home page</string>
    <string name="favourites_page">The Favourites Page</string>
    <string name="Profile_page">Profile Page</string>
    <string name="faq_page">FAQ Page</string>
    <string name="food_runner">Food Runner</string>
    <string name="navigationBar">Navigation Bar</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="logout_page">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_fragment">Home Page Fragment</string>
    <string name="favourites_page_fragment">Favourites Page Fragment</string>
    <string name="profile_page_fragment">Profile Page Fragment</string>
    <string name="faq_fragment">FAQ Fragment</string>
    <string name="check_connection">Check Connection</string>
    <string name="q1">Q1. Can I place order on call?</string>
    <string name="a1">A1. Sorry, we don’t accept orders on call. However you can call us on +91-8327087545 for any help related to placing order.</string>
    <string name="q2">Q2. How do I know my order is confirmed?</string>
    <string name="a2">A2. We will send you a order confirmation email once we receive your order.</string>
    <string name="q3">Q3. How do I cancel my order?</string>
    <string name="a3">A3. Please refer to our return and cancellation policy.</string>
    <string name="q4">Q4. How will be my orders delivered?</string>
    <string name="a4">A1. Orders are delivered directly by the Swiggy Packaging Assist suppliers. Different items in an order could be fulfilled by different suppliers. We will share the contact details and amount payable for all deliveries via email and SMS.</string>
    <string name="q5">Q5. Is delivery free?</string>
    <string name="a5">A5. Yes. There are no delivery or handling charges.</string>
    <string name="q6">Q6. Why is my location is not serviceable?</string>
    <string name="a6">A6. We are currently live only in a few cities. We will be expanding soon.</string>
    <string name="q7">Q7. When I have to pay?</string>
    <string name="a7">A7. You will have to pay at the time of delivery as per the payment details we send to you via email.</string>
    <string name="q8">Q8. Can I buy the goods on credit?</string>
    <string name="a8">A8. Sorry, we don’t allow a credit on goods currently.</string>
    <string name="q9">Q9. Will I get an invoice?</string>
    <string name="a9">A9. Yes. You will get your invoice from our supplier at the time of delivery.</string>
    <string name="q10">Q10. How have you selected these products?</string>
    <string name="a10">A10. We have show products which have passed our quality tests and are best suited for delivery. We will keep updating our catalog with better products. Stay tuned!</string>
</resources>